--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,18 +17,18 @@
                     {#
                     <td class="social-action">
                         <span id="fb-like-badge">
-                            <div id="fb-root"></div><fb:like href="http://www.khanacademie.nl" send="true" layout="button_count" width="100" show_faces="false" font=""></fb:like>
+                            <div id="fb-root"></div><fb:like href="http://www.iktel.nl" send="true" layout="button_count" width="100" show_faces="false" font=""></fb:like>
                         </span>
                     </td>
                     #}
                     <td class="social-action">
                         <a href="http://twitter.com/share" class="twitter-share-button"
-                           data-counturl="http://www.khanacademie.nl" data-url="http://www.khanacademie.nl"
+                           data-counturl="http://www.iktel.nl" data-url="http://www.iktel.nl"
                            data-text="Kijk. Oefen. Leer bijna alles online, en gratis." data-count="horizontal"
                            data-via="khanacademie">Tweet</a>
                     </td>
                     <td class="social-action gplus">
-                        <g:plusone size="medium" href="http://www.khanacademie.nl"></g:plusone>
+                        <g:plusone size="medium" href="http://www.iktel.nl"></g:plusone>
                     </td>
                     <td class="social-action">
                         <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fkhanacademie&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21"
