--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -94,7 +94,7 @@
                 </iframe> --> <!-- src="http://www.youtube.com/embed/ewsvvVtVfmo" -->
             </div>
             <div class='open-source-blurb' style="display: inline-block; background:white; width: 460px;">
-              <h4 style="color:orange; font-family:Raleway;font-size: 1.4em">Iktel <strong>open source</strong></h4>
+              <h4 style="color:#0776A0; font-family:Raleway;font-size: 1.8em">Iktel <strong>open source</strong></h4>
               <p style="color:black; font-family:Raleway; letter-spacing: 1.5px; font-size: 1em">
                 De Iktel is volledig open source. Dit betekent dat elke enthousiasteling kan meewerken aan dit platform.
                 Wij willen graag dat deze Nederlandse Iktel groeit met behulp van een community van programmeurs en leraren.
@@ -105,7 +105,7 @@
         </div>
         <div class="sites-blurb overflow-white" > <!-- style="background: white; padding: 30px;" -->
           <div class="wikizoek-blurb"> <!-- style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;" -->
-            <a href="http://video.khanacademie.nl">
+            <a href="http://video.iktel.nl">
             <img src="/images/icons/iconmonstr-video-icon.png" height="32px" width="32px">
             <h6>
                 Ga naar de video zoekmachine
@@ -113,7 +113,7 @@
             </a>
           </div>
           <div class="wikizoek-blurb" >
-            <a href="http://wiki.khanacademie.nl">
+            <a href="http://wiki.iktel.nl">
             <img src="/images/icons/iconmonstr-livejournal-icon.png" height="32px" width="32px">
             <h6>
                 Denk mee over oefeningen op de wiki
