--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -495,12 +495,12 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 
 .social-media-banner {
     /*height:250px;*/
-    height:200px;
-    width:1200px;
+    height:130px;
+    width:815px;
     margin:0 auto;
     text-align:center;
     /*padding-top:100px;*/
-    padding-top:80px
+    padding-top:2px
 }
 
 /*END NEW FOOTER STUFF*/
@@ -1077,7 +1077,7 @@ span.username_and_notification .user-name {
 .overflow-white { position: relative; }
 .overflow-orange {
     position: relative;
-    background: #F7931E;
+    background: #E7BF8F;
 }
 
 
@@ -1115,7 +1115,7 @@ span.username_and_notification .user-name {
     width: 9999px;
     top: 0;
     bottom: 0;
-    background: #F7931E;
+    background: white;
     /*background-color: #D3E8F2;*/
     /*background: #c0ffee;*/
 }
@@ -3231,16 +3231,18 @@ div.arrow-left-shadow {
     /*width: 310px;
     height: 120px;*/
     width: 150px;
-    height: 60px;
+    text-align: center;
+    font-size: 60px;
+    color: #459F6F;
 	/*height: 50px;*/
     /*background-image: url("/images/logos/khan-academie2.png");*/
-    background-image: url("/images/logos/khan-academie-poppetje-darker.png");
+    /*background-image: url("/images/logos/khan-academie-poppetje-darker.png");*/
     /* background-size: 80% 90%; */ /* change to 100% */
     background-size: 100% 100%;
     background-repeat: no-repeat;
     left: 0;
     /*margin-left: 24px;*/
-    margin-top: 10px;
+    margin-top: 39px;
     left: 0;
 }
 #stichting {
