--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -125,6 +125,22 @@
     </article>
 
 
+
+
+    
+    <div class="social-media-banner overflow overflow-orange" >
+    <a href="https://www.facebook.com/pages/Khan-Academie/123650984422563"><img src="/images/social-media-icons/facebook-256.png" height="128px" width="128px"></a>
+    <a href="http://twitter.com/khanacademie"><img src="/images/social-media-icons/twitter-256.png" height="128px" width="128px"></a>
+    <a href="https://plus.google.com/u/0/108155339552803678462/posts"><img src="/images/social-media-icons/googleplus-256.png" height="128px" width="128px"></a>
+
+    <a href="https://github.com/PerceptumNL"><img src="/images/social-media-icons/github-256.png" height="128px" width="128px"></a>
+    <!-- <a href="https://www.khanacademy.org/"><img src="/images/social-media-icons/khanacademy-256.png" height="128px" width="128px"></a> -->
+    
+    <a href="http://www.youtube.com/PerceptumNL"><img src="/images/social-media-icons/youtube-256.png" height="128px" width="128px"></a>
+    <a href="http://www.linkedin.com/groups/Perceptum-4916670"><img src="/images/social-media-icons/linkedin-256.png" height="128px" width="128px"></a>
+
+  </div>
+
 {% endblock pagecontent %}
 
 {% block bottompagescript %}
