iktel.nl changes

--- a/templates/about/about_template.html
+++ b/templates/about/about_template.html
@@ -23,8 +23,8 @@
     <span class="breadcrumbs_nav">
         <!--
         <a href="/about">De Site</a>
-        <a href="http://blog.khanacademie.nl/p/het-team.html">Het Team</a>
-        <a href="http://blog.khanacademie.nl/">Blog</a>
+        <a href="http://blog.iktel.nl/p/het-team.html">Het Team</a>
+        <a href="http://blog.iktel.nl/">Blog</a>
         -->
         <!--
         <a href="/about/contact">Contact</a>
