--- a/templates/about/contact.html
+++ b/templates/about/contact.html
@@ -71,11 +71,11 @@
         <h4>Kunnen wij iets voor jou doen of wil je ons helpen?</h4>
 		<p>Laat het ons weten.</p>
         <div class="general-contact" style="padding-top: 0;">
-            <p><a href="mailto:info@khanacademie.nl" class="contact-email">info@khanacademie.nl</a></p>   
+            <p><a href="mailto:info@iktel.nl" class="contact-email">info@iktel.nl</a></p>   
         </div>
 		<div class="clear"></div>
 		<h4>Heb je een probleem met een opgave?</h4>
-		<p style="font-size: 14px;">Ga dan terug naar de <a href="http://www.khanacademie.nl/exercisedashboard">opgave</a> en klik op <em>Probleem melden</em> onder aan de pagina.</br>
+		<p style="font-size: 14px;">Ga dan terug naar de <a href="http://www.iktel.nl/exercisedashboard">opgave</a> en klik op <em>Probleem melden</em> onder aan de pagina.</br>
 		Wij zullen dan zo snel mogelijk de melding verwerken en het probleem oplossen.</p>
         <div class="clear"></div>
 		<h4>Wil je een pilot draaien op je school?</h4>
