--- a/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
+++ b/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
@@ -23,7 +23,7 @@
 			<li>Les geven door het combineren van disciplines</li>
 		</ul>
 
-	<p>Wanneer je geïnteresseerd bent in het gebruik van de Iktel voor dergelijke doeleinden <a href="https://docs.google.com/a/khanacademie.nl/spreadsheet/viewform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ#gid=0"> meld je dan hier aan</a>.</p>
+	<p>Wanneer je geïnteresseerd bent in het gebruik van de Iktel voor dergelijke doeleinden <a href="https://docs.google.com/a/iktel.nl/spreadsheet/viewform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ#gid=0"> meld je dan hier aan</a>.</p>
 
 	<p><a href="{{base_url}}/toolkit-sections" class="call-to-action simple-button green">Volgende: Toolkit onderdelen →</a></p>
 
