--- a/templates/coach_resources/view_resources.html
+++ b/templates/coach_resources/view_resources.html
@@ -103,7 +103,7 @@
                 </a>
             </div>
             <h3><a href="http://khanacademy.desk.com">Jouw vragen</a></h3>
-            <p>Vind- en geef antwoord op veelgestelde vragen als: <a href="http://www.khanacademie.nl/about/faq"><br>Wat is de Iktel? </a> <br> Of, <a href="http://www.khanacademie.nl/about/faq">voeg je eigen vragen toe</a>. <br>(Wordt aangevuld)
+            <p>Vind- en geef antwoord op veelgestelde vragen als: <a href="http://www.iktel.nl/about/faq"><br>Wat is de Iktel? </a> <br> Of, <a href="http://www.iktel.nl/about/faq">voeg je eigen vragen toe</a>. <br>(Wordt aangevuld)
         </div>
 
         <div class="span3">
