--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -131,10 +131,10 @@
                     </object>
                     <br>
 
-                    Uiteindelijk kun je zelf de gemaakte filmpjes met de YouTube URL op <a href="video.khanacademie.nl">video.khanacademie.nl</a> uploaden.
+                    Uiteindelijk kun je zelf de gemaakte filmpjes met de YouTube URL op <a href="video.iktel.nl">video.iktel.nl</a> uploaden.
                     Je moet hier inloggen met je Google- of Facebookaccount. Nu staat je video klaar om beoordeeld te
                     worden door (andere) docenten van dit vakgebied.
-                    Stuur voor de zekerheid nog een keer de link naar info@khanacademie.nl, zodat je zeker weet dat we
+                    Stuur voor de zekerheid nog een keer de link naar info@iktel.nl, zodat je zeker weet dat we
                     hem niet missen.<br>
                 </div>
 
@@ -143,10 +143,10 @@
                 <div>
                     <p>Maak je ook gebruik van Iktel? Deel dan je ervaringen met ons. Het maakt niet uit of je
                         het thuis of in de klas gebruikt, wij zijn erg benieuwd naar de ervaringen van onze gebruikers.
-                        Lees bijvoorbeeld de ervaringen van Jan Knuivers op <a href="http://blog.khanacademie.nl"
-                                                                               target="_blank">blog.khanacademie.nl</a>
+                        Lees bijvoorbeeld de ervaringen van Jan Knuivers op <a href="http://blog.iktel.nl"
+                                                                               target="_blank">blog.iktel.nl</a>
                         . Hij is een docent op een basisschool in Rekken. <br><br> Wil je ook je ervaringen delen? Stuur
-                        dan een mail naar info@khanacademie.nl. Wij nemen dan contact met je op.
+                        dan een mail naar info@iktel.nl. Wij nemen dan contact met je op.
                         <br>
                     </p>
 
