--- a/templates/gebruiksvoorwaarden.html
+++ b/templates/gebruiksvoorwaarden.html
@@ -17,7 +17,7 @@
 
 		<h1>Gebruiksvoorwaarden</h1>
 		<p>
-		Welkom bij www.khanacademie.nl (hierna: de Website) en hartelijk dank voor je bezoek. Door het bezoeken en gebruiken van de Website ga je akkoord met de volgende algemene gebruiksvoorwaarden. Deze zijn bedoeld om ervoor te zorgen dat de Website voor iedereen werkt.</p>
+		Welkom bij www.iktel.nl (hierna: de Website) en hartelijk dank voor je bezoek. Door het bezoeken en gebruiken van de Website ga je akkoord met de volgende algemene gebruiksvoorwaarden. Deze zijn bedoeld om ervoor te zorgen dat de Website voor iedereen werkt.</p>
 
 		<p>Iktel geïnspireerd op Khan Academy.</p>
 
