--- a/templates/helpmee.html
+++ b/templates/helpmee.html
@@ -45,11 +45,11 @@
             <p>Hieronder volgt een instructiefilmpje voor het maken van filmpjes voor de Iktel</p>
             <iframe width="560" height="315" src="http://www.youtube.com/embed/q1ho0Q10wWA" frameborder="0" allowfullscreen></iframe>
     	  </ol>
-    	  <li>Ga naar <a href="wiki,khanacademie.nl">wiki.khanacademie.nl</a> en help ons het curriculum van oefeningen te verbeteren en aan te vullen.</li>
+    	  <li>Ga naar <a href="wiki.iktel.nl">wiki.iktel.nl</a> en help ons het curriculum van oefeningen te verbeteren en aan te vullen.</li>
     	  <li>Werk mee in de code om Iktel te verbeteren. Hiervoor gebruiken wij 
     	  	<a href="https://github.com/PerceptumNL">Github</a>
     	  </li>
-    	  <li>Doe een Iktel pilot op jouw school! Stuur een mailtje naar info@khanacademie.nl </li>
+    	  <li>Doe een Iktel pilot op jouw school! Stuur een mailtje naar info@iktel.nl </li>
         </ul>
         <div class="clear"></div>
     </article>
