--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -22,7 +22,7 @@
           <li><a href="/about">Onze Missie en Visie</a></li>
           <li><a href="/stichting">Stichting Iktel</a></li>
           <li><a href="/voorleraren">Hoe werkt het?</a></li>
-          <!-- <li><a href="http://blog.khanacademie.nl">Blog</a></li> -->
+          <!-- <li><a href="http://blog.iktel.nl">Blog</a></li> -->
         </ul>
 <!--         <ul>
           <li>Help</li>
@@ -31,10 +31,10 @@
         </ul> -->
         <ul>
           <li>Community</li>
-          <li><a href="http://wiki.khanacademie.nl/">Wiki</a></li>
+          <li><a href="http://wiki.iktel.nl/">Wiki</a></li>
           <li><a href="/helpmee">Draag bij</a></li>
-          <li><a href="http://blog.khanacademie.nl/">Blog</a></li>
-          <li><a href="http://www.khanacademie.nl/reportissue?type=Defect&issue_labels=">Fouten Melden</a></li>
+          <li><a href="http://blog.iktel.nl/">Blog</a></li>
+          <li><a href="http://www.iktel.nl/reportissue?type=Defect&issue_labels=">Fouten Melden</a></li>
         </ul>
         <ul>
           <li>Informatie</li>
@@ -46,7 +46,7 @@
         <ul>
           <li>Overig</li>
           <li><a href="/login?continue=%2Fpostlogin&direct=1">Inloggen Leerling</a></li>
-          <li><a href="/login?continue=http%3A//www.khanacademie.nl/class_profile">Inloggen Coach</a></li>
+          <li><a href="/login?continue=http%3A//www.iktel.nl/class_profile">Inloggen Coach</a></li>
           <li><a href="/gebruiksvoorwaarden">Gebruikersvoorwaarden</a></li>
           <li><a href="/privacybeleid">Privacybeleid</a></li>
         </ul>
