--- a/templates/new_page_template.html
+++ b/templates/new_page_template.html
@@ -76,7 +76,7 @@
         <meta property="og:title" content="Iktel"/>
         <meta property="og:description"
               content="Leer wat je wil, wanneer je het wil en in je eigen tempo. En ook nog eens gratis."/>
-        <meta property="og:image" content="http://www.khanacademie.nl/images/khan-logo-header.png"/>
+        <meta property="og:image" content="http://www.iktel.nl/images/khan-logo-header.png"/>
         <meta property="fb:page_id" content="123650984422563"/>
     {% endblock meta_facebook_tags %}
 
@@ -111,7 +111,7 @@
     <script type="text/javascript">
         {%- if not hide_analytics -%}
             _gaq.push(['_setAccount', 'UA-28120495-1']);
-            _gaq.push(['_setDomainName', '.khanacademie.nl']);
+            _gaq.push(['_setDomainName', '.iktel.nl']);
             _gaq.push(['_trackPageview']);
             _gaq.push(['_trackPageLoadTime']);
             {% for variable in ga_custom_vars %}
@@ -123,7 +123,7 @@
 
             // For OER Analytics
             _gaq.push(['ht._setAccount', 'UA-28120495-1']);
-            _gaq.push(['ht._setDomainName', '.khanacademie.nl']);
+            _gaq.push(['ht._setDomainName', '.iktel.nl']);
             _gaq.push(['ht._trackPageview']);
 
             // Mixpanel
@@ -140,7 +140,7 @@
     </script>
 
     <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>-->
-    <!-- <script src="http://video.khanacademie.nl/js/lib/jquery.cookie.js"></script> -->
+    <!-- <script src="http://video.iktel.nl/js/lib/jquery.cookie.js"></script> -->
     <script>
         function hideCookieMessage() {
             $.cookie("cookieMessage", "read");
@@ -264,7 +264,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://blog.khanacademie.nl/" target="_blank" data-tag="Header">
+                                    <a href="http://blog.iktel.nl/" target="_blank" data-tag="Header">
                                         Blog
                                     </a>
                                 </li>
@@ -276,7 +276,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://wiki.khanacademie.nl/" data-tag="Header" class="about-link">
+                                    <a href="http://wiki.iktel.nl/" data-tag="Header" class="about-link">
                                     Wiki
                                     </a>
                                 </li> #}
