--- a/templates/nl-content/about.html
+++ b/templates/nl-content/about.html
@@ -50,7 +50,7 @@
         <!-- class="selected"> Selected -->
         <a href="/nl-content/gettingstarted.html" id="getting-started">Aan de slag!</a>
         <a href="/nl-content/faq.html" id="faq">FAQ</a>
-        <a href="http://blog.khanacademie.nl/" id="blog">Blog</a>
+        <a href="http://blog.iktel.nl/" id="blog">Blog</a>
 		<a href="/nl-content/contact.html" id="faq">Contact</a>
     </span>
 {% endblock pagesubmenu %}
