--- a/templates/nl-content/contact.html
+++ b/templates/nl-content/contact.html
@@ -50,7 +50,7 @@
         <!-- class="selected"> Selected -->
         <a href="/nl-content/gettingstarted.html" id="getting-started">Aan de slag!</a>
         <a href="/nl-content/faq.html" id="faq">FAQ</a>
-        <a href="http://blog.khanacademie.nl/" id="blog">Blog</a>
+        <a href="http://blog.iktel.nl/" id="blog">Blog</a>
 		<a href="/nl-content/contact.html" id="faq" class="selected">Contact</a>
     </span>
 {% endblock pagesubmenu %}
@@ -66,11 +66,11 @@
         <h4>Kunnen wij iets voor jou doen of wil je ons helpen?</h4>
 		<p>Laat het ons weten.</p>
         <div class="general-contact" style="padding-top: 0;">
-            <p><a href="mailto:info@khanacademie.nl" class="contact-email">info@khanacademie.nl</a></p>   
+            <p><a href="mailto:info@iktel.nl" class="contact-email">info@iktel.nl</a></p>   
         </div>
 		<div class="clear"></div>
 		<h4>Heb je een probleem met een opgave?</h4>
-		<p style="font-size: 14px;">Ga dan terug naar de <a href="http://www.khanacademie.nl/exercisedashboard">opgave</a> en klik op <em>Probleem melden</em> onderaan de pagina.</br>
+		<p style="font-size: 14px;">Ga dan terug naar de <a href="http://www.iktel.nl/exercisedashboard">opgave</a> en klik op <em>Probleem melden</em> onderaan de pagina.</br>
 		Wij zullen dan zo snel mogelijk de melding verwerken en het probleem oplossen.</p>
         <div class="clear"></div>
 		<h4>Wil je een pilot draaien op je school?</h4>
