--- a/templates/nl-content/faq.html
+++ b/templates/nl-content/faq.html
@@ -56,7 +56,7 @@
         <!-- class="selected"> Selected -->
         <a href="/nl-content/gettingstarted.html" id="getting-started">Aan de slag!</a>
         <a href="/nl-content/faq.html" id="faq" class="selected">FAQ</a>
-        <a href="http://blog.khanacademie.nl/" id="blog">Blog</a>
+        <a href="http://blog.iktel.nl/" id="blog">Blog</a>
 		<a href="/nl-content/contact.html" id="faq">Contact</a>
     </span>
 {% endblock pagesubmenu %}
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col2 forty-sixty" style="text-align: justify; padding-top: 9px;">
                     <a name="why"><h2>Dit onderdeel wordt binnenkort aangevuld. Vragen kunnen altijd gesteld worden via
-                        info@khanacademie.nl of via onze social media kanalen.</h2></a><br><br>
+                        info@iktel.nl of via onze social media kanalen.</h2></a><br><br>
                     <a name="why"><h2>Wat is de Iktel?</h2></a>
 
                     <p>
@@ -180,7 +180,7 @@
 	</p>
 	<a name="vertalen"><h2>Kan ik de video's in een andere taal omzetten? Hoe pak ik dat aan?</h2></a>
 	<p>
-		Ja, dat kan zeer zeker! Het is feitelijk zo dat het vertaalproject van de Khan Academy op zoek is naar enthousiaste individuen zoals jijzelf die de lessen kunnen vertalen in zoveel mogelijk talen die op de wereld worden gesproken. Als jij de garantie kunt geven dat je eenduidig bent in je stijl en op alle onderdelen kwaliteit kunt leveren, zullen we je vertalingen zelfs op de Khan Academy website zetten! Bezoek het <a href="http://blog.khanacademie.nl">vertaalproject</a> voor ondersteuning en nieuwtjes.
+		Ja, dat kan zeer zeker! Het is feitelijk zo dat het vertaalproject van de Khan Academy op zoek is naar enthousiaste individuen zoals jijzelf die de lessen kunnen vertalen in zoveel mogelijk talen die op de wereld worden gesproken. Als jij de garantie kunt geven dat je eenduidig bent in je stijl en op alle onderdelen kwaliteit kunt leveren, zullen we je vertalingen zelfs op de Khan Academy website zetten! Bezoek het <a href="http://blog.iktel.nl">vertaalproject</a> voor ondersteuning en nieuwtjes.
 	</p>
 	<a name="termijn"><h2>Wat is het lange termijn doel van de Khan Academy?</h2></a>
 	<p>
