--- a/templates/voorleerlingen.html
+++ b/templates/voorleerlingen.html
@@ -140,7 +140,7 @@ img {
           <p>
             Als docent kun je naast het gebruk van bestaande video’s ook zelf video’s opnemen en toevoegen aan Iktel. 
             Er wordt nog een tool ontwikkeld waarmee je gemakkelijk je video kan uploaden. 
-            Op dit moment vragen wij echter om in de wiki te kijken (wiki.khanacademie.nl). 
+            Op dit moment vragen wij echter om in de wiki te kijken (wiki.iktel.nl). 
             Hier kun je zelf per leerdoel aangeven of je een geschikte video hebt gemaakt of er eentje weet. 
             Door op edit te klikken kun je zelf de link naar de video plaatsen.
           </p>
@@ -151,8 +151,8 @@ img {
             Ook dit proces is op onze wiki te volgen. 
             Hier staan alle oefeningen aangegeven die op den duur op de site komen. 
             Heb je ideeën over hoe je deze kunt toetsen of ken je soortgelijke oefeningen. 
-            Plaats ze dan in onze wiki op wiki.khanacademie.nl. 
-            Op ons <a href="http://blog.khanacademie.nl//search/label/Khan%20in%20de%20klas">blog</a> kun je lezen over de gebruikerservaring van een leraar die Khan in de klas gebruikt. 
+            Plaats ze dan in onze wiki op wiki.iktel.nl. 
+            Op ons <a href="http://blog.iktel.nl//search/label/Khan%20in%20de%20klas">blog</a> kun je lezen over de gebruikerservaring van een leraar die Khan in de klas gebruikt. 
           </p>
         <!-- <h3></h3><p></p> -->
 
