--- a/templates/nl-content/contribute.html
+++ b/templates/nl-content/contribute.html
@@ -16,9 +16,9 @@
 		<p>
 			We kunnen je hulp goed gebruiken! Geloof je ook in de mogelijkheden die de Iktel biedt? Help dan mee met:</p>
 			<ul>
-				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/help-met-vertalen.html">het vertalen van reken- en wiskundeoefeningen</a></li>
-				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/maak-filmpjes.html">het maken van uitlegvideo's</a></li>
-				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/content-voor-taaloefeningen.html">het ontwikkelen van content voor taaloefeningen</a></li>
+				<li style="font-size:14px;"><a href="http://blog.iktel.nl/p/help-met-vertalen.html">het vertalen van reken- en wiskundeoefeningen</a></li>
+				<li style="font-size:14px;"><a href="http://blog.iktel.nl/p/maak-filmpjes.html">het maken van uitlegvideo's</a></li>
+				<li style="font-size:14px;"><a href="http://blog.iktel.nl/p/content-voor-taaloefeningen.html">het ontwikkelen van content voor taaloefeningen</a></li>
 			</ul>
 			<p>Daarnaast zijn we erg benieuwd naar ervaringen uit de praktijk, zoals ook te zien op&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.khanacademy.org/stories" target="_blank">http://www.khanacademy.org/stories</a>
 		</p>
