--- a/templates/partners.html
+++ b/templates/partners.html
@@ -30,8 +30,8 @@
 
 {% block pagecontent %}
     <article id='partners'>
-    	<h2>Wordt partner van Khan</h2>
-    	<p>Het is mogelijk om je op verschillende manieren aan Khan te binden. </p>
+    	<h2>Wordt partner van iktel.nl</h2>
+    	<p>Het is mogelijk om je op verschillende manieren aan iktel.nl te binden. </p>
     	<h3>Video Makers</h3>
     	<p>
     		Binnen de Iktel zijn de komende jaren nog heel veel video’s nodig. 
@@ -40,7 +40,7 @@
     		De video’s behalen namelijk nooit het potentiële bereik dat ze hebben en bovendien is er niet direct relevant oefenmateriaal aanwezig. 
     		Door video’s voor de Iktel te maken help je leerlingen bij het onder de knie krijgen van oefeningen waar zij vastlopen.
     		In plaats van een bepaald probleem steeds opnieuw te moeten geven, kunnen leerlingen jouw instructie juist steeds opnieuw bekijken.
-			Interesse in het maken van video’s? Stuur dan een mailtje naar info@khanacademie.nl en wij nemen contact met je op.
+			Interesse in het maken van video’s? Stuur dan een mailtje naar info@iktel.nl en wij nemen contact met je op.
 		</p>
     	<h3>Pabo’s</h3>
     	<p>
@@ -50,13 +50,13 @@
 			Zelfs wanneer het kwalitatief hoogstaande video’s zijn, reiken deze video’s vaak niet verder dan het klaslokaal of raken zij in de vergetelheid op Youtube. 
 			Zou het daarom niet mooi zijn als deze video’s gekoppeld kunnen worden aan oefeningen die leerlingen nu al maken op de basisscholen?
 			Wij kunnen helpen met het bieden van relevante opdrachten waar de leerlingen aan kunnen werken waarbij ze ook nog eens relevante werkervaring opdoen en hun video’s al in de praktijk bekeken worden.
-			Is jullie pabo geinteresseerd om video’s voor de Iktel te gaan maken? Stuur dan een mailtje naar info@khanacademie.nl.
+			Is jullie pabo geinteresseerd om video’s voor de Iktel te gaan maken? Stuur dan een mailtje naar info@iktel.nl.
 		</p>
     	<h3>Pilot</h3>
     	<p>
     		De Iktel is gratis beschikbaar en dat zal ook zo blijven. 
     		We zijn op zoek naar zo veel mogelijk gebruikers om zo meer data te verzamelen waarmee we ons platform uiteindelijk kunnen verbeteren.    		
-			Wil je direct betrokken zijn bij de ontwikkeling van ons platform, stuur dan een mailtje naar info@khanacademie.nl
+			Wil je direct betrokken zijn bij de ontwikkeling van ons platform, stuur dan een mailtje naar info@iktel.nl
 		</p>
     	<h3>Google apps partner</h3>
     	<p>
