--- a/templates/videoplayer.html
+++ b/templates/videoplayer.html
@@ -18,7 +18,7 @@
             </a>
             </li>
             <li>
-            <a  href="http://twitter.com/share?url=http%3A%2F%2Fwww.khanacademie.nl%2Fvideo%3Fv%3D{{video.youtube_id|urlencode|escape}}&amp;via=khanacademie.nl"
+            <a  href="http://twitter.com/share?url=http%3A%2F%2Fwww.iktel.nl%2Fvideo%3Fv%3D{{video.youtube_id|urlencode|escape}}&amp;via=iktel.nl"
                 class="twitterShare"
                 onclick="_gaq.push(['_trackEvent', 'Click', 'Video-Page-Share-Twitter']);">
                 <i class="icon-twitter icon-large"></i>
@@ -27,7 +27,7 @@
             </li>
             <li>
             <a  class="emailShare"
-                href="mailto:?Subject=I just learnt about {{video.title}} at Khanacademie&amp;Body=You can learn about it too. Check out http%3A%2F%2Fwww.khanacademie.nl%2Fvideo%3fv%3D{{video.youtube_id|urlencode}}"
+                href="mailto:?Subject=I just learnt about {{video.title}} at Khanacademie&amp;Body=You can learn about it too. Check out http%3A%2F%2Fwww.iktel.nl%2Fvideo%3fv%3D{{video.youtube_id|urlencode}}"
                 onclick="_gaq.push(['_trackEvent', 'Click', 'Video-Page-Share-Email']);">
                 <i class="icon-envelope icon-large"></i>
                 Email
